src/style.css
*
{
    margin: 0;
    padding: 0;
}

/* html,
body
{
    overflow: hidden;
} */

html
{
    background: #1e1a20;
}

.webgl
{
    position: fixed;
    top: 0;
    left: 0;
    outline: none;
}

.section
{
    display: flex;
    align-items: center;
    height: 100vh;
    position: relative;
    font-family: 'Cabin', sans-serif;
    color: #ffeded;
    text-transform: uppercase;
    font-size: 7vmin;
    padding-left: 10%;
    padding-right: 10%;
}

section:nth-child(odd)
{
    justify-content: flex-end;
}

.button {
    position: fixed;
    padding: 1vmin 2vmin;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 3vmin;
    font-family: Helvetica, Arial, sans-serif;
    bottom: 4vmin;
    left: 50%;
    transform: translateX(-50%);
    cursor: pointer;
    border-radius: 0.5vmin;
}

.version1 {
    background-color: black;
    border: 1px solid white;
    color: white;
}

.version2 {
    background-color: #1e1a20;
    border: 1px solid #ffeded;
    color: #ffeded;
}

